# telegram-verifier-bot

./: .dockerignore  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.dev.yml  docker-compose.yml
.sisyphus/: boulder.json
.sqlx/: query-0e5ba1488431839080b3bfdab2ec6c3c8f24887a9717a7989c25d0a90181ad9c.json  query-19d0a626c3ba88afcbe36d2f9e71aac70761ed78105965f96615bea3fe4baaff.json  query-1a0f514da3144b92ab5dd07aa8f62db9a058973be669b4f8a0e02b3d54ebfe2f.json  query-1d69c08de1a9adbc85fcc833579293353d321dc78748139817c4ebdb7e846816.json  query-2c199a2055b8f10f198aa85e7dd822f26904cdcc64717698b2d4fc6d2345aaf1.json  query-2c40cea8774ecb07d26e764f5d8498cd466e9e2127a1797c124604e3037f9f3a.json  query-2fb9b0f59c673d1b589880618c12f159d9f6ef1e0a2fefb109493021944937e0.json  query-377693ef1029da8ab05c428d9eb214a3a6a52e104416a4273d4f9d497c573672.json  query-3a474f15d32fe1c19ba75f1ae8ae9b862fa9a0a004f0d16227dc807c9d25de50.json  query-46bff66bd8416648e685148c8cf4122625ae339f645c49c54e4c981ca56b08b6.json  query-46cc7122855277785a4c292b9ff44efb84e14d7912da2eda7883daf752159991.json  query-47da68ab6ac3ca7d3c4c2d807218fc3b3cc087c5edc3d0458c2158bce8e06282.json  query-4d9eb9fb7a49a190ce76247ddd01b55a7bf06a1256c86cecddcc833d3c97d52c.json  query-5038e3dfe86976fc021991f71d7de64966a52e86bcb3733097b9c8a4f1481a6a.json  query-53aacd92e1a76d165d772fcb7edc97536061613bc14d9a426e5bff9f1ca197e9.json  query-552b3846b3a18dee4e2bf60a01d1998732be60076d0a0e37b54598c9eb55d607.json  (+26 more)
migrations/: 001_create_communities.sql  (+10 more)
src/: config.rs  (+5 more)
(+72 files in other folders)
